--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -373,8 +373,8 @@
 
 @media only screen and (min-width: 375px) {
   .skills-swip-wrapper.swiper-one {
-    min-width: none;
-    max-width: none;
+    min-width: unset;
+    max-width: unset;
     width: 260px;
   }
 }
