--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -8,9 +8,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project7@1.webp 1x,
+                ./img/covers/webp/project7@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project7@1.png 1x,
                 ./img/covers/project7@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -26,9 +34,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project1@1.webp 1x,
+                ./img/covers/webp/project1@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project1@1.png 1x,
                 ./img/covers/project1@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -44,9 +60,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project2@1.webp 1x,
+                ./img/covers/webp/project2@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project2@1.png 1x,
                 ./img/covers/project2@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -62,9 +86,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project3@1.webp 1x,
+                ./img/covers/webp/project3@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project3@1.png 1x,
                 ./img/covers/project3@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -82,9 +114,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project7@1.webp 1x,
+                ./img/covers/webp/project7@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project7@1.png 1x,
                 ./img/covers/project7@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -100,9 +140,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project1@1.webp 1x,
+                ./img/covers/webp/project1@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project1@1.png 1x,
                 ./img/covers/project1@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -118,9 +166,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project2@1.webp 1x,
+                ./img/covers/webp/project2@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project2@1.png 1x,
                 ./img/covers/project2@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -136,9 +192,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project3@1.webp 1x,
+                ./img/covers/webp/project3@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project3@1.png 1x,
                 ./img/covers/project3@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -157,9 +221,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project4@1.webp 1x,
+                ./img/covers/webp/project4@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project4@1.png 1x,
                 ./img/covers/project4@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -175,9 +247,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project5@1.webp 1x,
+                ./img/covers/webp/project5@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project5@1.png 1x,
                 ./img/covers/project5@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -193,9 +273,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project6@1.webp 1x,
+                ./img/covers/webp/project6@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project6@1.png 1x,
                 ./img/covers/project6@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -211,9 +299,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project9@1.webp 1x,
+                ./img/covers/webp/project9@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project9@1.png 1x,
                 ./img/covers/project9@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -231,9 +327,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project4@1.webp 1x,
+                ./img/covers/webp/project4@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project4@1.png 1x,
                 ./img/covers/project4@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -249,9 +353,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project5@1.webp 1x,
+                ./img/covers/webp/project5@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project5@1.png 1x,
                 ./img/covers/project5@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -267,9 +379,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project6@1.webp 1x,
+                ./img/covers/webp/project6@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project6@1.png 1x,
                 ./img/covers/project6@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -285,9 +405,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project9@1.webp 1x,
+                ./img/covers/webp/project9@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project9@1.png 1x,
                 ./img/covers/project9@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -306,9 +434,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project8@1.webp 1x,
+                ./img/covers/webp/project8@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project8@1.png 1x,
                 ./img/covers/project8@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -324,9 +460,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project7@1.webp 1x,
+                ./img/covers/webp/project7@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project7@1.png 1x,
                 ./img/covers/project7@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -343,9 +487,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project10@1.webp 1x,
+                ./img/covers/webp/project10@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project10@1.png 1x,
                 ./img/covers/project10@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -361,9 +513,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project1@1.webp 1x,
+                ./img/covers/webp/project1@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project1@1.png 1x,
                 ./img/covers/project1@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -381,9 +541,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project8@1.webp 1x,
+                ./img/covers/webp/project8@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project8@1.png 1x,
                 ./img/covers/project8@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -399,9 +567,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project7@1.webp 1x,
+                ./img/covers/webp/project7@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project7@1.png 1x,
                 ./img/covers/project7@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -413,13 +589,22 @@
             />
           </picture>
         </li>
+
         <li class="covers-marquee__line covers-marquee__line-js">
           <picture>
+            <source
+              srcset="
+                ./img/covers/webp/project10@1.webp 1x,
+                ./img/covers/webp/project10@2.webp 2x
+              "
+              type="image/webp"
+            />
             <source
               srcset="
                 ./img/covers/project10@1.png 1x,
                 ./img/covers/project10@2.png 2x
               "
+              type="image/png"
             />
 
             <img
@@ -435,9 +620,17 @@
           <picture>
             <source
               srcset="
+                ./img/covers/webp/project1@1.webp 1x,
+                ./img/covers/webp/project1@2.webp 2x
+              "
+              type="image/webp"
+            />
+            <source
+              srcset="
                 ./img/covers/project1@1.png 1x,
                 ./img/covers/project1@2.png 2x
               "
+              type="image/png"
             />
 
             <img
