--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -30,19 +30,36 @@
           <div class="projects-images">
             <picture>
               <source
+                srcset="
+                  ./img/projects/webp/projects1_tablet-desktop@1.webp 1x,
+                  ./img/projects/webp/projects1_tablet-desktop@2.webp 2x
+                "
                 media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
                 srcset="
                   ./img/projects/projects1_tablet-desktop@1.png 1x,
                   ./img/projects/projects1_tablet-desktop@2.png 2x
                 "
+                media="(min-width: 768px)"
+                type="image/png"
               />
-
               <source
+                srcset="
+                  ./img/projects/webp/projects1_mobile@1.webp 1x,
+                  ./img/projects/webp/projects1_mobile@2.webp 2x
+                "
                 media="(max-width: 767px)"
+                type="image/webp"
+              />
+              <source
                 srcset="
                   ./img/projects/projects1_mobile@1.png 1x,
                   ./img/projects/projects1_mobile@2.png 2x
                 "
+                media="(max-width: 767px)"
+                type="image/png"
               />
               <img
                 src="./img/projects/projects1_mobile@1.png"
@@ -81,18 +98,36 @@
           <div class="projects-images">
             <picture>
               <source
+                srcset="
+                  ./img/projects/webp/projects2_tablet-desktop@1.webp 1x,
+                  ./img/projects/webp/projects2_tablet-desktop@2.webp 2x
+                "
                 media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
                 srcset="
                   ./img/projects/projects2_tablet-desktop@1.png 1x,
                   ./img/projects/projects2_tablet-desktop@2.png 2x
                 "
+                media="(min-width: 768px)"
+                type="image/png"
               />
               <source
+                srcset="
+                  ./img/projects/webp/projects2_mobile@1.webp 1x,
+                  ./img/projects/webp/projects2_mobile@2.webp 2x
+                "
                 media="(max-width: 767px)"
+                type="image/webp"
+              />
+              <source
                 srcset="
                   ./img/projects/projects2_mobile@1.png 1x,
                   ./img/projects/projects2_mobile@2.png 2x
                 "
+                media="(max-width: 767px)"
+                type="image/png"
               />
               <img
                 src="./img/projects/projects2_mobile@1.png"
@@ -131,18 +166,36 @@
           <div class="projects-images">
             <picture>
               <source
+                srcset="
+                  ./img/projects/webp/projects3_tablet-desktop@1.webp 1x,
+                  ./img/projects/webp/projects3_tablet-desktop@2.webp 2x
+                "
                 media="(min-width: 768px)"
+                type="image/webp"
+              />
+              <source
                 srcset="
                   ./img/projects/projects3_tablet-desktop@1.png 1x,
                   ./img/projects/projects3_tablet-desktop@2.png 2x
                 "
+                media="(min-width: 768px)"
+                type="image/png"
               />
               <source
+                srcset="
+                  ./img/projects/webp/projects3_mobile@1.webp 1x,
+                  ./img/projects/webp/projects3_mobile@2.webp 2x
+                "
                 media="(max-width: 767px)"
+                type="image/webp"
+              />
+              <source
                 srcset="
                   ./img/projects/projects3_mobile@1.png 1x,
                   ./img/projects/projects3_mobile@2.png 2x
                 "
+                media="(max-width: 767px)"
+                type="image/png"
               />
               <img
                 src="./img//projects/projects3_mobile@1.png"
