--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -15,10 +15,27 @@
       <picture>
         <source
           srcset="
+            ./img/about-me/webp/aboutme_desktop@1.webp 1x,
+            ./img/about-me/webp/aboutme_desktop@2.webp 2x
+          "
+          media="(min-width: 1440px)"
+          type="image/webp"
+        />
+        <source
+          srcset="
             ./img/about-me/aboutme_desktop@1.png 1x,
             ./img/about-me/aboutme_desktop@2.png 2x
           "
           media="(min-width: 1440px)"
+          type="image/png"
+        />
+        <source
+          srcset="
+            ./img/about-me/webp/aboutme_tablet@1.webp 1x,
+            ./img/about-me/webp/aboutme_tablet@2.webp 2x
+          "
+          media="(min-width: 768px)"
+          type="image/webp"
         />
         <source
           srcset="
@@ -26,14 +43,27 @@
             ./img/about-me/aboutme_tablet@2.png 2x
           "
           media="(min-width: 768px)"
+          type="image/png"
         />
-        <img
-          class="about-me-image"
-          src="./img/about-me/aboutme_mobile@1.png"
+        <source
+          srcset="
+            ./img/about-me/webp/aboutme_mobile@1.webp 1x,
+            ./img/about-me/webp/aboutme_mobile@2.webp 2x
+          "
+          media="(max-width: 767px)"
+          type="image/webp"
+        />
+        <source
           srcset="
             ./img/about-me/aboutme_mobile@1.png 1x,
             ./img/about-me/aboutme_mobile@2.png 2x
           "
+          media="(max-width: 767px)"
+          type="image/png"
+        />
+        <img
+          class="about-me-image"
+          src="./img/about-me/aboutme_mobile@1.png"
           alt="me-photo"
           width="343"
           height="500"
