--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,17 +2,29 @@
   <div class="container header-container">
     <div class="wrapper">
       <a class="logo-container" href="./index.html">
-        <img
-          srcset="
-            ./img/header/icon_header@1.png 1x,
-            ./img/header/icon_header@2.png 2x
-          "
-          src="./img/header/icon_header@1.png"
-          alt="jefferson"
-          width="80"
-          height="80"
-          loading="lazy"
-        />
+        <picture>
+          <source
+            srcset="
+              ./img/header/webp/icon_header@1.webp 1x,
+              ./img/header/webp/icon_header@2.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
+              ./img/header/icon_header@1.png 1x,
+              ./img/header/icon_header@2.png 2x
+            "
+            type="image/png"
+          />
+          <img
+            src="./img/header/icon_header@1.png"
+            alt="jefferson"
+            width="80"
+            height="80"
+            loading="lazy"
+          />
+        </picture>
         jefferson*
       </a>
       <button type="button" class="menu-button">
