--- a/src/css/footer-work-together.css
+++ b/src/css/footer-work-together.css
@@ -95,6 +95,7 @@
   color: var(--main-text);
   border-bottom: 1px solid rgba(250, 250, 250, 0.5);
 }
+
 .footer-input-comment {
   margin-bottom: 32px;
 }
@@ -296,6 +297,14 @@
     margin-right: 32px;
   }
 
+  .footer-form-email {
+    margin-bottom: -5px;
+  }
+
+  .footer-input-comment {
+    margin-bottom: 0;
+  }
+
   .footer-input-email,
   .footer-input-comment {
     width: 245px;
@@ -331,6 +340,7 @@
     justify-content: center;
     align-items: center;
   }
+
   .modal-content {
     padding: 64px;
     width: 492px;
