--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -53,20 +53,20 @@
 }
 
 .hero-social-links-item {
-  display: inline;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 12px;
-  border-radius: 60px;
-  border: 1px solid #fafafa;
   width: 37px;
   height: 37px;
-  cursor: pointer;
+  border-radius: 60px;
+  border: 1px solid #fafafa;
+  padding: 0;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-social-links-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   color: #fafafa;
   font-size: 14px;
   letter-spacing: -0.02em;
