--- a/src/css/footer-work-together.css
+++ b/src/css/footer-work-together.css
@@ -233,6 +233,11 @@
   fill: #fafafa;
 }
 
+.close-btn:hover,
+.close-btn:focus {
+  transform: scale(1.1);
+}
+
 @media screen and (min-width: 768px) {
   .footer-page {
     padding-top: 88px;
